--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "mathjax-node-tex2png",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "mathjax-node-tex2png",
   "main": "server.js",
   "author": {
-    "name": ""
+    "name": "ixCiel"
   },
   "dependencies": {
+    "brotli": "^1.3.2",
     "mathjax-node": "^2.1.1",
     "sharp": "^0.28.3"
   }
