--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "brotli": "^1.3.2",
     "mathjax-node": "^2.1.1",
+    "mime-types": "^2.1.32",
     "sharp": "^0.28.3"
   }
 }
