--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "brotli": "^1.3.2",
     "mathjax-node": "^2.1.1",
     "mime-types": "^2.1.32",
+    "minimist": "^1.2.5",
     "sharp": "^0.28.3"
   }
 }
